# cifar10-model

./: README.md  pyproject.toml  to_onnx.ipynb  train.py  wrapper.py
Adam_LR_1e-4_WD_1e-4_efficientnet_b0/: history.csv
